fix wrapping

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,14 @@
   padding: 2rem;
   text-align: center;
 }
+@media only screen and (max-width: 615px) {
+  #root {
+    max-width: 1280px;
+    padding: 0;
+    text-align: center;
+    margin: 0 20px;
+  }
+}
 
 .logo {
   height: 6em;
